# chapi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/chapi/: __init__.py  __main__.py  cli.py
src/chapi/api/: app.py  exceptions.py  main.py  request_state.py  settings.py  tags.py
src/chapi/api/models/: link.py  root.py
src/chapi/api/routers/: root.py
tests/api/: conftest.py  test_root.py
